# RBForge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: unsloth_RBForge_sft_rl.yaml
docs/: AGENT_SETUP.md  AGENT_SETUP.rbmem  HOWTO.md
examples/: debugger_eval_cases.json  forge_thread_tool.py  rbmem_tools_schema.rbmem  starter_harness.py  trajectory_invention_loop.json
graphify-out/: .graphify_manifest.json  GRAPH_REPORT.md  graph.json
graphify-out/wiki/: community_12.md  community_13.md  community_14.md  community_15.md  community_16.md  community_17.md  community_18.md  community_19.md  community_20.md  community_23.md  community_4.md  community_5.md  community_6.md  community_7.md  community_8.md  community_9.md  index.md  src_ornstein_rbforge_forge_py.md  src_ornstein_rbforge_harness_py.md  src_ornstein_rbforge_harness_py_toolharness.md  src_ornstein_rbforge_models_py.md  src_ornstein_rbforge_rbmem_py.md  src_ornstein_rbforge_rbmem_py_rbmemstore.md  src_ornstein_rbforge_rbmem_py_rbmemstore_apply_graph.md  src_ornstein_rbforge_rbmem_py_rbmemstore_ensure.md  src_ornstein_rbforge_rbmem_py_rbmemstore_persist_candidate.md  src_ornstein_rbforge_rbmem_py_rbmemstore_register_validated_tool.md  src_ornstein_rbforge_rbmem_py_rbmemstore_run.md  src_ornstein_rbforge_rbmem_py_rbmemstore_update_section.md  src_ornstein_rbforge_rbmem_py_rbmemstore_validate.md  (+6 more)
scripts/: demo_invention_loop.py
src/RBForge/: __init__.py  (+1 more)
tests/: test_debugger.py  test_doctor.py  test_eval.py  test_rbforge_public_api.py  test_rbmem_graph_patch.py  test_validation_and_sandbox.py
(+20 files in other folders)
