[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "RBForge"
version = "0.1.0"
description = "Runtime tool forging, validation, and RBMEM persistence for Ornstein/Hermes agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Gestalt Labs" }]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["jsonschema>=4.21", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.8", "jsonschema>=4.21"]

[project.scripts]
rbforge-demo = "ornstein_rbforge.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
